// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return contact details 1`] = `
Object {
  "data": Object {
    "booking": Object {
      "contactDetails": Object {
        "email": "kiwicomtester@gmail.com",
        "phone": "+44 000",
      },
    },
  },
}
`;

exports[`should return passenger information 1`] = `
Object {
  "data": Object {
    "booking": Object {
      "contactDetails": Object {
        "passenger": Object {
          "firstname": "TEST",
          "lastname": "TEST",
          "nationality": "gb",
          "title": "mr",
        },
      },
    },
  },
}
`;
